update (deployment fix)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://GusTheGent.github.io/WorldExplorer",
+  "homepage": "http://GusTheGent.github.io",
   "name": "rtk-query",
   "version": "0.1.0",
   "private": true,
